# wall-ctf

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
cati/: __init__.py  __main__.py  ctf.py  wall.py
examples/: heavy_wall.json  insulated_wall.json
paper/: paper.bib  paper.md
scripts/: generate_figures.py
tests/: test_ctf.py
